--- a/css/main.css
+++ b/css/main.css
@@ -4,22 +4,23 @@ body
 	padding: 0;
 	color: #555;
 	font: normal 10pt Arial,Helvetica,sans-serif;
-	background: #EFEFEF;
+	background: url(ffdr.jpg);
+#	background: #000000;
 }
 
 #page
 {
-	margin-top: 5px;
-	margin-bottom: 5px;
+	margin-top: 50px;
+	margin-bottom: 50px;
 	background: white;
-	border: 1px solid #C9E0ED;
+#	border: 1px solid #C9E0ED;
 }
 
 #header
 {
 	margin: 0;
 	padding: 0;
-	border-top: 3px solid #C9E0ED;
+#	border-top: 3px solid #FFFFFF;
 }
 
 #content
@@ -43,8 +44,9 @@ body
 
 #logo
 {
-	padding: 10px 20px;
-	font-size: 200%;
+	padding: 50px 100px;
+	font-size: 300%;
+	background:url(fd.png);
 }
 
 #mainmenu
@@ -54,7 +56,7 @@ body
 
 #mainmenu ul
 {
-	padding:6px 20px 5px 20px;
+	padding:6px 20px 5px 500px;
 	margin:0px;
 }
 
