--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@ body
 	margin-top: 50px;
 	margin-bottom: 50px;
 	background: white;
+	opacity: 0.8;
 #	border: 1px solid #C9E0ED;
 }
 
@@ -25,7 +26,7 @@ body
 
 #content
 {
-    padding: 20px;
+    padding: 50px;
 }
 
 #sidebar
@@ -67,7 +68,7 @@ body
 
 #mainmenu ul li a
 {
-	color:#ffffff;
+	color:#FFFFFF;
 	background-color:transparent;
 	font-size:12px;
 	font-weight:bold;
@@ -163,8 +164,8 @@ div.search-form
 .portlet-decoration
 {
 	padding: 3px 8px;
-	background: #B7D6E7;
-	border-left: 5px solid #6FACCF;
+	background: #696969;
+	border-left: 5px solid #808080;
 }
 
 .portlet-title
@@ -173,7 +174,7 @@ div.search-form
 	font-weight: bold;
 	padding: 0;
 	margin: 0;
-	color: #298dcd;
+	color: #ffffff;
 }
 
 .portlet-content
@@ -181,7 +182,7 @@ div.search-form
 	font-size:0.9em;
 	margin: 0 0 15px 0;
 	padding: 5px 8px;
-	background:#EFFDFF;
+	background:#808080;
 }
 
 .portlet-content ul
@@ -195,7 +196,7 @@ div.search-form
 
 .portlet-content li
 {
-	padding: 2px 0 4px 0px;
+	padding: 2px 0 4px 10px;
 }
 
 .operations
@@ -227,5 +228,5 @@ div.search-form
 
 .operations li a:hover
 {
-	background: #80CFFF;
+	background: #ffffff;
 }
